--- a/public/templates/article_search.html
+++ b/public/templates/article_search.html
@@ -7,7 +7,7 @@
 </button>
         <a class="navbar-brand">
             <span class="white">
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Search" ng-change="doSearch()" ng-model="searchMe.data">
           </span></a>
     </div>
     <div class="navbar-collapse collapse">
@@ -20,3 +20,7 @@
 
 </div>
 <h3>Article Search</h3>
+<div class="the_content" ng-repeat="aData in fullData|filter:textFilter">
+  <h1>{{aData.heading}}</h1>
+  <p>{{aData.text}}</p>
+</div>
